add schema registry UI; view & delete schema registry subjects; add generics; refactor code;